Create Cards using DOM

--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
       </nav>
     </header>
 
-    <main></main>
+    <main>
+      <section id="cards"></section>
+    </main>
 
     <footer class="footer grid grid--2-cols">
       <section>
